# imp

./: .gitignore  BOOTSTRAP.md  Cargo.toml  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  README.md  ROADMAP.md  test_knowledge.py  test_mcp_integration.py
crates/imp-cli/: Cargo.toml
crates/imp-cli/src/: agent.rs  claude_code.rs  client.rs  compaction.rs  config.rs  context.rs  db.rs  embeddings.rs  error.rs  extraction.rs  highlight.rs  knowledge.rs  logging.rs  main.rs  project.rs  subagent.rs  tmux.rs  usage.rs
crates/imp-cli/src/cli/: bootstrap.rs  chat.rs  knowledge_cmd.rs  learn.rs  login.rs  mod.rs  oneshot.rs  project.rs  project_cmd.rs  reflect.rs  team.rs  tui.rs
crates/imp-cli/src/tools/: builtin.rs  mcp.rs  mod.rs
docs/: KNOWLEDGE_GRAPH_PLAN.md
imp/src/: agent.rs  config.rs  context.rs  error.rs  main.rs
imp/src/cli/: bootstrap.rs
imp/templates/: ARCHITECTURE.md  PRINCIPLES.md  STACK.md
templates/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
templates/global/: ARCHITECTURE.md  IDENTITY.md  MEMORY.md  PRINCIPLES.md  SOUL.md  STACK.md  USER.md
templates/project/: CONTEXT.md
templates/team/: ARCHITECTURE.md  GOTCHAS.md  PRINCIPLES.md  STACK.md  TEAM.md
