[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }
anthropic-auth = { version = "0.1", features = ["async", "callback-server"] }