[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }
termimad = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
rustyline = "14"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
terminal_size = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
cozo = { version = "0.7", default-features = false, features = ["storage-rocksdb"] }
fastembed = "4"
